@@ -1,29 +1,11 @@
 package org.epics.archiverappliance.retrieval;
 
-import static org.junit.Assert.assertTrue;
-
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.UnsupportedEncodingException;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.net.URLEncoder;
-import java.sql.Timestamp;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.NoSuchElementException;
-
+import edu.stanford.slac.archiverappliance.PlainPB.PlainPBStoragePlugin;
 import org.apache.commons.io.FileUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.epics.archiverappliance.Event;
 import org.epics.archiverappliance.EventStream;
-import org.epics.archiverappliance.IntegrationTests;
 import org.epics.archiverappliance.TomcatSetup;
 import org.epics.archiverappliance.common.BasicContext;
 import org.epics.archiverappliance.common.TimeUtils;
@@ -40,26 +22,42 @@ import org.epics.archiverappliance.utils.ui.JSONEncoder;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 import org.json.simple.JSONValue;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.experimental.categories.Category;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 
-import edu.stanford.slac.archiverappliance.PlainPB.PlainPBStoragePlugin;
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.UnsupportedEncodingException;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.NoSuchElementException;
 
-@Category(IntegrationTests.class)
+@Tag("integration")
 public class MultiPVClusterRetrievalTest {
-	private static Logger logger = LogManager.getLogger(MultiPVClusterRetrievalTest.class.getName());
-	private TomcatSetup tomcatSetup = new TomcatSetup();
-	private PlainPBStoragePlugin pbplugin = new PlainPBStoragePlugin();
-	short year = (short) TimeUtils.getCurrentYear();
+	private static final Logger logger = LogManager.getLogger(MultiPVClusterRetrievalTest.class.getName());
+	private final TomcatSetup tomcatSetup = new TomcatSetup();
+	private final PlainPBStoragePlugin pbplugin = new PlainPBStoragePlugin();
+	short year = TimeUtils.getCurrentYear();
 
-	private String pvName = "MultiPVClusterRetrievalTest:dataretrieval";
-	private String pvName2 = "MultiPVClusterRetrievalTest:dataretrieval2";
-	private String ltsFolder = System.getenv("ARCHAPPL_LONG_TERM_FOLDER");
-	private File ltsPVFolder = new File(ltsFolder + File.separator + "MultiPVClusterRetrievalTest");
+	private final String pvName = "MultiPVClusterRetrievalTest:dataretrieval";
+	private final String pvName2 = "MultiPVClusterRetrievalTest:dataretrieval2";
+	private final String ltsFolder = System.getenv("ARCHAPPL_LONG_TERM_FOLDER");
+	private final File ltsPVFolder = new File(ltsFolder + File.separator + "MultiPVClusterRetrievalTest");
 
-	@Before
+	@BeforeEach
 	public void setUp() throws Exception {	
 		tomcatSetup.setUpClusterWithWebApps(this.getClass().getSimpleName(), 2);
 		
@@ -68,7 +66,7 @@ public class MultiPVClusterRetrievalTest {
 		}
 	}
 
-	@After
+	@AfterEach
 	public void tearDown() throws Exception {
 		tomcatSetup.tearDown();
 		if(ltsPVFolder.exists()) { 
@@ -89,7 +87,7 @@ public class MultiPVClusterRetrievalTest {
 		pbplugin.initialize("pb://localhost?name=LTS&rootFolder=" + ltsFolder + "&partitionGranularity=PARTITION_YEAR", configService);
 				
 		// Generate an event stream to populate the PB files
-		SimulationEventStream simstream = new SimulationEventStream(ArchDBRTypes.DBR_SCALAR_DOUBLE, new SineGenerator(0), year);
+        SimulationEventStream simstream = new SimulationEventStream(ArchDBRTypes.DBR_SCALAR_DOUBLE, new SineGenerator(0), TimeUtils.getStartOfYear(year), TimeUtils.getEndOfYear(year), 1);
 		try(BasicContext context = new BasicContext()) {
 			pbplugin.appendData(context, pvName, simstream);
 			pbplugin.appendData(context, pvName2, simstream);
@@ -109,9 +107,9 @@ public class MultiPVClusterRetrievalTest {
 		decoder.decode(srcPVTypeInfoJSON, srcPVTypeInfo);
 		
 		PVTypeInfo pvTypeInfo1 = new PVTypeInfo(pvName, srcPVTypeInfo);
-		assertTrue("Expecting PV typeInfo for " + pvName + "; instead it is " + pvTypeInfo1.getPvName(), pvTypeInfo1.getPvName().equals(pvName));
+		Assertions.assertEquals(pvName, pvTypeInfo1.getPvName(), "Expecting PV typeInfo for " + pvName + "; instead it is " + pvTypeInfo1.getPvName());
 		PVTypeInfo pvTypeInfo2 = new PVTypeInfo(pvName2, srcPVTypeInfo);
-		assertTrue("Expecting PV typeInfo for " + pvName2 + "; instead it is " + pvTypeInfo2.getPvName(), pvTypeInfo2.getPvName().equals(pvName2));
+		Assertions.assertEquals(pvName2, pvTypeInfo2.getPvName(), "Expecting PV typeInfo for " + pvName2 + "; instead it is " + pvTypeInfo2.getPvName());
 
 		JSONEncoder<PVTypeInfo> encoder = JSONEncoder.getEncoder(PVTypeInfo.class);
 		
@@ -120,7 +118,7 @@ public class MultiPVClusterRetrievalTest {
 		pvTypeInfo1.setCreationTime(TimeUtils.convertFromISO8601String("2013-11-11T14:49:58.523Z"));
 		pvTypeInfo1.setModificationTime(TimeUtils.now());
 		pvTypeInfo1.setApplianceIdentity("appliance0");
-		GetUrlContent.postObjectAndGetContentAsJSONObject("http://localhost:17665/mgmt/bpl/putPVTypeInfo?pv=" + URLEncoder.encode(pvName, "UTF-8") + "&override=false&createnew=true", encoder.encode(pvTypeInfo1));
+		GetUrlContent.postObjectAndGetContentAsJSONObject("http://localhost:17665/mgmt/bpl/putPVTypeInfo?pv=" + URLEncoder.encode(pvName, StandardCharsets.UTF_8) + "&override=false&createnew=true", encoder.encode(pvTypeInfo1));
 
 		logger.info("Added " + pvName + " to appliance0");
 		
@@ -129,7 +127,7 @@ public class MultiPVClusterRetrievalTest {
 		pvTypeInfo2.setCreationTime(TimeUtils.convertFromISO8601String("2013-11-11T14:49:58.523Z"));
 		pvTypeInfo2.setModificationTime(TimeUtils.now());
 		pvTypeInfo2.setApplianceIdentity("appliance1");
-		GetUrlContent.postObjectAndGetContentAsJSONObject("http://localhost:17665/mgmt/bpl/putPVTypeInfo?pv=" + URLEncoder.encode(pvName2, "UTF-8") + "&override=false&createnew=true", encoder.encode(pvTypeInfo2));
+		GetUrlContent.postObjectAndGetContentAsJSONObject("http://localhost:17665/mgmt/bpl/putPVTypeInfo?pv=" + URLEncoder.encode(pvName2, StandardCharsets.UTF_8) + "&override=false&createnew=true", encoder.encode(pvTypeInfo2));
 		logger.info("Added " + pvName + " to appliance1");
 		
 		logger.info("Finished loading " + pvName + " and " + pvName2 + " into their appliances.");
@@ -137,18 +135,18 @@ public class MultiPVClusterRetrievalTest {
 		short currentYear = TimeUtils.getCurrentYear();
 		String startString = currentYear + "-11-17T16:00:00.000Z";
 		String endString = currentYear + "-11-17T16:01:00.000Z";
-		
-		Timestamp start = TimeUtils.convertFromISO8601String(startString);
-		Timestamp end = TimeUtils.convertFromISO8601String(endString);
-		Timestamp pluginstart = TimeUtils.convertFromEpochMillis(start.getTime() + 1000);
-		
-		Map<String, List<JSONObject>> pvToData = retrieveJsonResults(startString, endString);
+
+        Instant start = TimeUtils.convertFromISO8601String(startString);
+        Instant end = TimeUtils.convertFromISO8601String(endString);
+
+        Map<String, List<JSONObject>> pvToData = retrieveJsonResults(startString, endString);
 		
 		logger.info("Received response from server; now retrieving data using PBStoragePlugin Start: " + TimeUtils.convertToISO8601String(start) + " End: " + TimeUtils.convertToISO8601String(end));
-		
-		try (BasicContext context = new BasicContext(); 
-				EventStream pv1ResultsStream = new CurrentThreadWorkerEventStream(pvName, pbplugin.getDataForPV(context, pvName, pluginstart, end));
-				EventStream pv2ResultsStream = new CurrentThreadWorkerEventStream(pvName2, pbplugin.getDataForPV(context, pvName2, pluginstart, end))) {
+
+        try (BasicContext context = new BasicContext();
+             EventStream pv1ResultsStream = new CurrentThreadWorkerEventStream(pvName, pbplugin.getDataForPV(context, pvName, start, end));
+             EventStream pv2ResultsStream = new CurrentThreadWorkerEventStream(pvName2, pbplugin.getDataForPV(context, pvName2, start, end))) {
+			assert pvToData != null;
 			compareDataAndTimestamps(pvName, pvToData.get(pvName), pv1ResultsStream);
 			compareDataAndTimestamps(pvName2, pvToData.get(pvName2), pv2ResultsStream);
 		}
@@ -159,8 +157,8 @@ public class MultiPVClusterRetrievalTest {
 		
 		// Establish a connection with appliance0 -- borrowed from http://www.mkyong.com/java/how-to-send-http-request-getpost-in-java/
 		URL obj = new URL("http://localhost:17665/retrieval/data/getDataForPVs.json?pv=" 
-				+ URLEncoder.encode(pvName, "UTF-8") + "&pv=" + URLEncoder.encode(pvName2, "UTF-8") + "&from=" + URLEncoder.encode(startString, "UTF-8")
-				+ "&to=" + URLEncoder.encode(endString, "UTF-8") + "&pp=pb");
+				+ URLEncoder.encode(pvName, StandardCharsets.UTF_8) + "&pv=" + URLEncoder.encode(pvName2, StandardCharsets.UTF_8) + "&from=" + URLEncoder.encode(startString, StandardCharsets.UTF_8)
+				+ "&to=" + URLEncoder.encode(endString, StandardCharsets.UTF_8) + "&pp=pb");
 		logger.info("Opening this URL: " + obj.toString());
 		HttpURLConnection con = (HttpURLConnection) obj.openConnection();
 		con.setRequestMethod("GET");
@@ -176,7 +174,7 @@ public class MultiPVClusterRetrievalTest {
 		// Retrieve JSON response
 		BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
 		String inputLine;
-		StringBuffer content = new StringBuffer();
+		StringBuilder content = new StringBuilder();
 
 		while ((inputLine = in.readLine()) != null) {
 			content.append(inputLine);
@@ -205,8 +203,7 @@ public class MultiPVClusterRetrievalTest {
 			// Data for PV
 			JSONArray pvDataJson = (JSONArray) ((JSONObject) finalResult.get(i)).get("data");
 			List<JSONObject> pvData = new ArrayList<>();
-			for (int j = 0; j < pvDataJson.size(); j++) 
-				pvData.add((JSONObject) pvDataJson.get(j));
+			for (Object o : pvDataJson) pvData.add((JSONObject) o);
 			
 			pvToData.put(pvName, pvData);
 			
@@ -224,8 +221,8 @@ public class MultiPVClusterRetrievalTest {
 				JSONObject jsonEvent = pvJsonData.get(counter++);
 				
 				// Get values
-				double jsonValue = Double.valueOf(jsonEvent.get("val").toString());
-				double pluginValue = Double.valueOf(pluginEvent.getSampleValue().toString());
+				double jsonValue = Double.parseDouble(jsonEvent.get("val").toString());
+				double pluginValue = Double.parseDouble(pluginEvent.getSampleValue().toString());
 				
 				// Get seconds and nanoseconds for JSON
 				String jsonSecondsPart = jsonEvent.get("secs").toString();
@@ -234,11 +231,11 @@ public class MultiPVClusterRetrievalTest {
 				
 				// Get seconds and nanoseconds for plugin event
 				String pluginSecondsPart = Long.toString(pluginEvent.getEpochSeconds());
-				String pluginNanosPart = Integer.toString(pluginEvent.getEventTimeStamp().getNanos());
+                String pluginNanosPart = Integer.toString(pluginEvent.getEventTimeStamp().getNano());
 				String pluginTimestamp = pluginSecondsPart + ("000000000" + pluginNanosPart).substring(pluginNanosPart.length());
-				
-				assertTrue("JSON timestamp, " + jsonTimestamp + ", and plugin event timestamp, " + pluginTimestamp + ", are unequal.", jsonTimestamp.equals(pluginTimestamp));
-				assertTrue("JSON value, " + jsonValue + ", and plugin event value, " + pluginValue + ", are unequal.", jsonValue == pluginValue);
+
+				Assertions.assertEquals(jsonTimestamp, pluginTimestamp, "JSON timestamp, " + jsonTimestamp + ", and plugin event timestamp, " + pluginTimestamp + ", are unequal.");
+				Assertions.assertEquals(jsonValue, pluginValue, 0.0, "JSON value, " + jsonValue + ", and plugin event value, " + pluginValue + ", are unequal.");
 			}
 		} catch (IndexOutOfBoundsException e) {
 			throw new IndexOutOfBoundsException("The data obtained from JSON and the plugin class for PV " + pvName + " are unequal in length.");
